# multi_rtsp

./: multi_rtsp.sln  multi_rtsp.vcxproj  multi_rtsp.vcxproj.filters  video_streaming.cpp  video_streaming.h
thread_c/: CMakeLists.txt  README.md  multi_rtsp.cpp
yolov10-master/: README.md  app.py  package-lock.json  predict.py  predict_video.py  predict_video_multiprocessing.py
yolov10-master/data/: README.dataset.txt  README.roboflow.txt  data.yaml
yolov10-master/data/test/labels/: -_20240620104632_jpg.rf.a427839f1af2fd1faf63745635342198.txt
yolov10-master/data/train/labels/: -_20240620104638_jpg.rf.32fd6fe3ba0fb2b03e85899b9b44e43e.txt  -_20240620104649_jpg.rf.eeefca22efbed1c60d71d07cd4d38baa.txt  -_20240620104655_jpg.rf.1cbfa6fde057549adaf61bdb134ae978.txt  -_20240620104730_jpg.rf.d22c9a7ce1a5ce4c6d40863b9edda888.txt  -_20240620104737_jpg.rf.4307de354a3e4b4fd896999d85b48101.txt  -_20240620104744_jpg.rf.fb8d64d7692b828eb465f9fb9d5afd3a.txt
yolov10-master/data/valid/labels/: -_20240620104643_jpg.rf.2163059a9f64346274450694ea4960cc.txt
yolov10-master/gradio_cached_examples/15/: log.csv
yolov10-master/ultralytics.egg-info/: PKG-INFO
yolov10-master/wangwei/: Yolov10Detector.py
yolov10-master/wangwei/AiVirtualMouse/: AiVirtualMouse.py  READEM.md
yolov10-master/wangwei/手势控制音量/: HandTrackingModule.py  READEM.md  VolumeHandControl.py
yolov10-master/wangwei/本地视频识别/: Yolov10Detector111.py
yolov10-master/wangwei/本机摄像头识别/: Yolov10Detector.py
yolov10-master/三个文件/: settings.yaml
yolov10-master/说明/: 说明.md
